@@ -456,7 +456,7 @@ leave multi-line mode without sending the message
         the buddies to another group with the "/move" command).
 </dd>
 <dt><b>
-/room join|leave|names|nick|privmsg|remove|topic|unlock
+/room join|leave|names|nick|privmsg|remove|topic|unlock|destroy
 </b></dt>
 <dt><b>
 /room invite|kick|ban|role|affil
@@ -526,6 +526,14 @@ set topic for current room
 </td>
 <td>
 unlock current room (if you are the owner)
+</td>
+</tr>
+<tr valign="top">
+<td>
+<b>destroy</b> [reason]
+</td>
+<td>
+destroy the current room (use with care!)
 </td>
 </tr>
 <tr valign="top">
@@ -742,7 +750,7 @@ License (GPL).</p>
 <div id="footer">
 <p>
 Version 0.7.2-dev<br />
-Last updated 11-Dec-2005 11:17:53 CEST
+Last updated 14-Dec-2005 00:04:31 CEST
 </p>
 </div>
 </div>
